fix(_email.scss): text in c-message-body not visible in light theme

--- a/scss/apps/email/_email.scss
+++ b/scss/apps/email/_email.scss
@@ -86,7 +86,9 @@
   }
 
   .c-message-body {
-    color: themes-get-value("email-app-message-body-color");
+    @include themes($email-app-theme-map) {
+      color: themes-get-value("email-app-message-body-color");
+    }
   }
 
   .c-message-attachment {
